@@ -1,5 +1,6 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Add the Catalyst::Dispatcher->dispatch_type method (ash)
         - Throw an exception rather than loading an app if an action
           tries to chain to itself (t0m)
           - Tests for this
